--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "type": "module",
   "main": "./src/index.js",
   "scripts": {
-    "start": "node ./src/index.js",
+    "start": "node ./src/services/MemoryService.js",
     "test:essan": "node test_essan.js",
     "test:agents": "node test_agent_network.js",
-    "dev": "nodemon ./src/index.js"
+    "dev": "nodemon ./src/services/MemoryService.js"
   },
   "dependencies": {
     "@zilliz/milvus2-sdk-node": "^2.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "prom-client": "^14.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
