--- a/config/prometheus/prometheus.yml
+++ b/config/prometheus/prometheus.yml
@@ -10,16 +10,23 @@ scrape_configs:
   - job_name: 'milvus'
     static_configs:
       - targets: ['milvus-standalone:9091']
+    metrics_path: '/metrics'
+
+  - job_name: 'minio'
+    static_configs:
+      - targets: ['minio:9000']
+    metrics_path: '/minio/v2/metrics/cluster'
 
   - job_name: 'node_exporter'
     static_configs:
       - targets: ['node-exporter:9100']
 
-  - job_name: 'minio'
-    metrics_path: /minio/v2/metrics/cluster
+  - job_name: 'lmstudio'
     static_configs:
-      - targets: ['minio:9000']
-    
+      - targets: ['host.docker.internal:9100']
+    metrics_path: '/metrics'
+
   - job_name: 'hps_memory'
     static_configs:
       - targets: ['mcp_memory:8001']
+    metrics_path: '/metrics'
